# socketbar

./: .gitignore  LICENSE  README.md  RELEASING.md  install.sh
.github/workflows/: build-release.yml
extension/: background.js  defaults.js  filters.js  manifest.json  options.html  options.js  popup.html  popup.js
host/: Cargo.toml
host-manifest/: io.socketbar.host.json.template
host/src/: listeners.rs  main.rs
